# proto-generator

./: .clang-format  .gitmodules  CMakeLists.txt  Hello2.proto  Makefile  README.md
.cache/clangd/index/: CppField.hpp.681C3E428B7ABD55.idx  CppStruct.hpp.30AC9CD186E008CC.idx  CppTranslationUnit.hpp.5D1FCE5679938FEE.idx  ProtoGeneratorAction.cpp.E5F1993C782D15DC.idx  ProtoGeneratorAction.hpp.3878F4864DB742EE.idx  ProtoGeneratorConsumer.cpp.CF31F27ED3FB4522.idx  ProtoGeneratorConsumer.hpp.91560FE5B0A67BE1.idx  ProtoGeneratorVisitor.cpp.0703EE0B8D886C51.idx  ProtoGeneratorVisitor.hpp.3C9C9D09E324C6E0.idx  ast_visitor.h.F7CC69B603972A91.idx  boost_json_serializer.cpp.3C5E2FDE4A90A639.idx  boost_json_serializer.h.648F96FE87B23097.idx  config.h.9E3B49DC87CF43BF.idx  error_handling.h.7298153CC1ADA7E1.idx  error_info.cpp.B66CC738A12A5BD1.idx  error_info.h.87C1D2F5A3929F37.idx  expression_evaluator.cpp.B76ABA9FB07E4CD7.idx  expression_evaluator.h.FCF49A470B3440F7.idx  expression_parser.cpp.4E9D9AF3661B44A7.idx  expression_parser.h.ADF198E5007FC256.idx  filesystem_handler.cpp.D37E0E7ED7D956C7.idx  filesystem_handler.h.7C56D75632E9F876.idx  filters.cpp.D3E930578CCFED16.idx  filters.h.EC3F13ADDC4BF5E9.idx  (+40 more)
cmake/: Config.cmake
include/proto_generator/: CppField.hpp  CppStruct.hpp  CppTranslationUnit.hpp  ProtoGeneratorAction.hpp  ProtoGeneratorConsumer.hpp  ProtoGeneratorVisitor.hpp
proto/stdssr/: Hello2.hpp
src/proto_generator/: CMakeLists.txt  ProtoGeneratorAction.cpp  ProtoGeneratorConsumer.cpp  ProtoGeneratorVisitor.cpp
templates/: converter.jinja2  proto.jinja2
(+8 files in other folders)
